--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
      @-webkit-keyframes example {
        from {background-color: rgba(0, 0, 0, 0.3);}
-       to {background-color: black;}
+       to {background-color: lightblue;}
      }
 
 /* Standard syntax */
      @keyframes example {
       from {background-color: rgba(0, 0, 0, 0.3);}
-       to {background-color:black;}
+       to {background-color:lightblue;}
     } 
 
      
