Background color changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <style>
 
      body {
-       color: blue;
+       color: white;
        text-align: center;
        font-family: cursive;
        -webkit-animation-name: example; /* Chrome, Safari, Opera */
@@ -30,14 +30,14 @@
 
 
      @-webkit-keyframes example {
-       from {background-color: rgba(0, 0, 0, 0.3);}
-       to {background-color: lightblue;}
+       from {background-color: #141629;}    
+       to {background-color: #5b5d71;}
      }
 
 /* Standard syntax */
      @keyframes example {
-      from {background-color: rgba(0, 0, 0, 0.3);}
-       to {background-color:lightblue;}
+      from {background-color: #141629;}
+       to {background-color: #5b5d71;}
     } 
 
      
@@ -67,7 +67,7 @@
 
      li a {
          text-decoration: none;
-        color: blue;
+        color: white;
       }
       
       li a:hover{
