updating the font-family

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      body {
        color: white;
        text-align: center;
-       font-family: cursive;
+       font-family: fantasy;
        -webkit-animation-name: example; /* Chrome, Safari, Opera */
        -webkit-animation-duration: 2s; /* Chrome, Safari, Opera */
        animation-iteration-count: infinite;
@@ -71,7 +71,7 @@
       }
       
       li a:hover{
-        color: cyan;
+        color: coral;
       }
 
      </style>
