--- a/index.html
+++ b/index.html
@@ -13,21 +13,17 @@
                 mouseleave: function(){
                     $(this).hide(5000);
                 }
-
               });
 
            $("a").on({
                 mouseenter: function(){
-                    $(this).css(" background-color", "lightgray");
-                     $(this).css("border-radius", "30px");
+                    $(this).css(" background-color", "lightgray").css("border-radius", "30px");
                 },
                 mouseleave: function(){
-                    $(this).css("background-color", "lightblue");
-                    $(this).css("border-radius", "30px");
+                    $(this).css("background-color", "lightblue").css("border-radius", "30px");
                 },
                 click: function(){
-                    $(this).css("background-color", "yellow");
-                     $(this).css("border-radius", "30px");
+                    $(this).css("background-color", "yellow").css("border-radius", "30px");
 
                 }
              });
